--- a/docs/faststore/components/features/my-account/extensions.mdx
+++ b/docs/faststore/components/features/my-account/extensions.mdx
@@ -3,7 +3,7 @@ title: "Extending My Account"
 hidden: true
 ---
 
-In this guide, you'll learn how to extend the **My Account** page in your B2B store by either creating new pages or adding new sections to the default pages.
+In this guide, you'll learn how to extend the **My Account** page in your B2B store by creating new pages or adding new sections to the default pages.
 
 Check if the [default My Account pages](https://developers.vtex.com/docs/guides/faststore/my-account-overview#default-my-account-pages) meet your needs. If not, you can [create a new page](#creating-new-pages) or [add a new section](#adding-new-sections) to better fit your requirements. These extensions allow you to customize the My Account experience without changing its default structure.
 
