fixing the highlight

--- a/docs/faststore/components/features/my-account/extensions.mdx
+++ b/docs/faststore/components/features/my-account/extensions.mdx
@@ -32,7 +32,7 @@ Next, enable this new page as a valid route:
 2. In the `src/myAccount` folder, create a file named `navigation.ts`.
 3. In the `src/myAccount/navigation.ts` file, import the `getMyAccountRoutes` function from `@faststore/core` and set the new route as follows:
 
-    ```ts src/myAccount/navigation.ts mark=[5:7]
+    ```ts src/myAccount/navigation.ts mark=5,6,7
     import { getMyAccountRoutes } from "@faststore/core";
 
     export default getMyAccountRoutes({
