adding `textarea` component

--- a/docs/faststore/components/atoms/overview.mdx
+++ b/docs/faststore/components/atoms/overview.mdx
@@ -141,4 +141,11 @@ hideTOC: true
   >
     <SROnly text="visually hidden text" />
   </CardItem>
+  <CardItem
+    title="Textarea"
+    description="Enables users to input multi-line text. It's commonly used for longer user inputs, such as comments or descriptions."
+    actionPath="/docs/guides/faststore/atoms-textarea"
+  >
+    <Textarea placeholder="Label" id="textareafield-default" />
+  </CardItem>
 </CardList>
