Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -417,7 +417,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Tag"
-    description="An interactive `Badge` with a close button by default."
+    description="An interactive `Badge` with a close button."
     actionPath="/docs/guides/faststore/molecules-tag"
   >
     <Tag variant="highlighted" label="Tag" onClose={() => {}} />
