--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -4,11 +4,11 @@ title: "Managing Secrets"
 
 In this guide, you'll learn how to manage secrets in your FastStore project using [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview).
 
-Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment.
+Secrets are sensitive information, such as API keys, passwords, and tokens, that must be securely managed during the FastStore project deployment.
 
 [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers. This ensures that sensitive information is kept out of your project’s codebase and is retrieved securely by WebOps.
 
->ℹ️ In FastStore v1, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json` and then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore v2+, this workflow has been deprecated - secrets are now managed directly through the WebOps interface.
+>ℹ️ In FastStore v1, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json` and then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore v2+, this workflow has been deprecated, and secrets are now managed directly through the WebOps interface.
 
 ## Local development
 
@@ -26,10 +26,18 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 
 ### Creating secrets
 
-1. In the `Key` field, enter the name of the secret, which serves as its unique identifier (example: VTEX_API_TOKEN, NEXT_SECRET_KEY). In the `Value` field, enter the corresponding sensitive information you want to store (example: the actual token, key, or password). 
+1. In the `Key` field, enter the name of the secret, which serves as its unique identifier (example: VTEX_API_TOKEN, NEXT_SECRET_KEY). In the `Value` field, enter the corresponding sensitive information you want to store (example: the actual token, key, or password).
+
+   >ℹ Secrets accessible in the browser (client-side) must start with the prefix `NEXT_PUBLIC_`. For all other secrets, use other names without this prefix.
+
 2. Click `Add`. A pop-up with `New Secret added successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
+
+   >⚠ When creating multiple secrets, make sure you include all of them before proceeding to the next step. This prevents synchronization errors.
+
 3. Click `Redeploy` to redeploy your website with the updated secret configuration. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 4. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
+
+   During the build process, any secrets registered through WebOps will be transformed into environment variables within the code, automatically loading them into the `process.env` object. You can access these values in your code using `process.env.VARIABLE_NAME`. For further details, refer to the Next.js guide [How to use environment variables in Next.js](https://nextjs.org/docs/pages/guides/environment-variables).
 
    The secret created will be available in the **Current Keys** section.
 
