--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -8,7 +8,7 @@ Secrets are sensitive information, such as API keys, passwords, and tokens, that
 
 [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers. This ensures that sensitive information is kept out of your project’s codebase and is retrieved securely by WebOps.
 
->ℹ️ In FastStore v1, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json` and then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore v2+, this workflow has been deprecated, and secrets are now managed directly through the WebOps interface.
+>ℹ️ For stores not using WebOps, secrets is handled through the [VTEX IO CLI](https://developers.vtex.com/docs/guides/vtex-io-documentation-vtex-io-cli-plugins) secrets plugin. To enable secrets management, an empty `vtex.env` file need to be present in the project root. The key-value pairs is stored in the `secrets.revealed.json` file, then encrypted into `secrets.hidden.json` before being committed to the main branch. For stores using WebOps, this workflow has been deprecated, and secrets are managed directly through the WebOps interface.
 
 ## Local development
 
@@ -37,7 +37,7 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 3. Click `Redeploy` to redeploy your website with the updated secret configuration. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 4. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
-   During the build process, any secrets registered through WebOps will be transformed into environment variables within the code, automatically loading them into the `process.env` object. You can access these values in your code using `process.env.VARIABLE_NAME`. For further details, refer to the Next.js guide [How to use environment variables in Next.js](https://nextjs.org/docs/pages/guides/environment-variables).
+   During the build process, any secrets registered through WebOps will be transformed into environment variables within the code, automatically loading them into the `process.env` object. You can access these values in your code using `process.env.VARIABLE_NAME`. *Remember to replace `VARIABLE_NAME` with the name you assigned to your secret in the `Key` field*.
 
    The secret created will be available in the **Current Keys** section.
 
