--- a/docs/localization/1-onboarding-dashboard.mdx
+++ b/docs/localization/1-onboarding-dashboard.mdx
@@ -1,5 +1,5 @@
 ---
-title: FastStore WebOps - Dashboard
+title: 'FastStore WebOps - Dashboard'
 ---
 
 Once you [create your FastStore project](https://developers.vtex.com/docs/guides/faststore/1-onboarding-starting-the-project#step-2-deploying-the-project) or if you're already working on customizing it, you can use the WebOps dashboard to see an overview of website deployments and performance.
