--- a/docs/localization/delivery-promise.mdx
+++ b/docs/localization/delivery-promise.mdx
@@ -7,11 +7,18 @@ title: "Delivery Promise"
 In this guide, you’ll learn how to set Delivery Promise in your FastStore project.
 
 **Delivery Promise** is a feature that provides accurate and reliable delivery estimations for available products based on the shopper's specific location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at nearby locations.
+
 This solution continuously updates product availability throughout the purchase journey by responding to changes in catalog, pricing, inventory, or shipping settings. These updates are then sent to [Checkout](https://developers.vtex.com/docs/guides/checkout-overview) and [Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), ensuring customers see up-to-date options according to their region.
+
+This feature introduces new hooks as part of the regionalization and location workflow:
+
+- `useRegion`: Access or update the user’s region information, such as postal code or location.
+- `useRegionModal`: Handle modal display logic for region selection, especially when the input of location is mandatory. 
+- `useGeoLocation`: Interact with the browser’s geolocation API or related client-side mechanisms to attempt to auto-detect the user’s location.
 
 ## Default settings
 
-This feature is defined in the `deliveryPromise` section of the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
+Delivery Promise feature is defined in the `deliveryPromise` section of the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
 
 See below the default settings for FastStore projects created after the release of the Delivery Promise feature:
 
@@ -24,8 +31,6 @@ deliveryPromise: {
 
 - `enabled`: When set to **true**, Delivery Promise activates, allowing the store to provide delivery estimates based on the customer’s location.
 - `mandatory`: When set to **false**, providing a postal code is optional for the user. Customers can browse and add items to cart without submitting their zip code, though the accuracy of delivery information may be limited.
-
-If your FastStore project was created before the launch of Delivery Promise, follow the instructions below to activate it.
 
 ## Before you begin
 
@@ -77,6 +82,10 @@ If you are using a different major version and want to migrate, please [open a t
 
 Run the `yarn upgrade @faststore/cli` command to update the `@faststore/cli` package to its latest version.
 
+### Open a ticket to VTEX support
+
+Open a ticket to [VTEX support](https://help.vtex.com/en/support) and ask to enable Delivery Promise in your account.
+
 ## Instructions
 
 ### Step 1 - Enabling `deliveryPromise`
@@ -85,18 +94,16 @@ Run the `yarn upgrade @faststore/cli` command to update the `@faststore/cli` pac
 2. Open the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
 3. Under the [`deliveryPromise`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options#deliverypromise) section, set the `enabled` value to `true`. Set the `mandatory` value according to your business needs. Learn more in the [Default settings](#default-settings) section.
 
- ```js discovery.config.js
- deliveryPromise: {
-    enabled: true,
+    ```js discovery.config.js
+    deliveryPromise: {
+      enabled: true,
       mandatory: false,
- }
- ```
-
-4. Open a ticket to [VTEX support](https://help.vtex.com/en/support) and ask to enable Delivery Promise in your account.
+    }
+    ```
 
 ### Step 2 - Syncing FastStore project with Headless CMS
 
-After receiving the confirmation that Delivery Promise is set up in your account, run the `faststore cms-sync` command to sync the `cms` folder of your FastStore project with the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview).
+Run the `faststore cms-sync` command to sync the `cms` folder of your FastStore project with the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview).
 
 The expected response is that you receive the message `CMS synced successfully...`. The native regionalization components and sections will be automatically updated. You can check them in the VTEX Admin:
 
@@ -129,8 +136,7 @@ To set a default zip code for your store, follow the steps below:
 2. Open the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
 3. In the [`session`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options#session) object, set the `postalCode` value according to your scenario. See the following example:
 
- ```js discovery.config.js mark=13
-
+ ```js discovery.config.js mark=12
   session: {
     currency: {
       code: "USD",
@@ -154,10 +160,7 @@ To provide accurate Delivery Promise estimates, FastStore projects determine use
 
 1. **User-provided location:** If the user provided their location, such as postal code, this information is used. No further action is needed to use Delivery Promise; just ensure that the [instructions](#instructions) provided above are completed.
 2. **Logged-in user’s address:** If the user hasn’t provided a postal code, we attempt to identify the location using the logged-in user's address. No further action is needed to use Delivery Promise; just ensure that the [instructions](#instructions) provided above are completed.
-3. **Default postal code:** If the user hasn't provided a location, isn’t logged in or has no saved address, we check if the merchant has configured a default postal code for all buyers.
-
-  Learn to do so in [Defining a default postal code](#optional-step-4-defining-a-default-postal-code).
-
+3. **Default postal code:** If the user hasn't provided a location, isn’t logged in or has no saved address, we check if the merchant has configured a default postal code for all buyers. Learn to do so in [Defining a default postal code](#optional-step-4-defining-a-default-postal-code).
 4. **No postal code (not mandatory):** If no postal code is provided, and it’s not mandatory, products are displayed without using Delivery Promise.
 5. **No postal code (mandatory)**: If no postal code is provided and it’s mandatory, a modal is displayed that the buyer cannot close until a postal code is entered. 
  
