--- a/docs/faststore/components/molecules/popover.mdx
+++ b/docs/faststore/components/molecules/popover.mdx
@@ -8,7 +8,7 @@ components:
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection containerStyle={{ flexDirection:'column', alignItems: 'normal' }}>
+    <OverviewSection>
         <PopoverUsage />
     </OverviewSection>
   </Tab>
