--- a/docs/faststore/components/molecules/popover.mdx
+++ b/docs/faststore/components/molecules/popover.mdx
@@ -9,7 +9,9 @@ components:
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
     <OverviewSection>
+      <UIProvider>
         <PopoverUsage />
+      </UIProvider>
     </OverviewSection>
   </Tab>
   <Tab>
