Storefront pages category

--- a/docs/faststore/components/storefront-pages/displaying-content-for-authenticated-users.mdx
+++ b/docs/faststore/components/storefront-pages/displaying-content-for-authenticated-users.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Authenticated content'
+title: 'Displaying content for authenticated users'
 ---
 
 Authenticated content is a feature that restricts access to specific store content based on whether a user is logged in. This ensures that only registered and logged-in users can view exclusive content, like prices, detailed product descriptions, and special offers. Non-logged-in users will see generic content instead.
