--- a/docs/faststore/components/storefront-pages/implementing-regionalization-features.mdx
+++ b/docs/faststore/components/storefront-pages/implementing-regionalization-features.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Regionalization"
+title: "Implementing regionalization features"
 excerpt: "This feature enables customers to set a location using a valid Postal Code."
 ---
 
