--- a/docs/faststore/components/storefront-pages/building-navigation-menus.mdx
+++ b/docs/faststore/components/storefront-pages/building-navigation-menus.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Navigation"
+title: "Building navigation menus"
 excerpt: "This feature enables customers to navigate among the store pages."
 ---
 
