--- a/docs/faststore/components/storefront-pages/implementing-search-features.mdx
+++ b/docs/faststore/components/storefront-pages/implementing-search-features.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Search"
+title: "Implementing search features"
 excerpt: "This feature enables customers to find their search easier."
 ---
 
